NoStatePrefetch: allow more than 2 requests

Currently when the Background Tab Resource Load Throttling ([1]) is
enabled, the nostate-prefetch webcontents is throttled to 2 requests at
a time. When more than 2 requests are made by nostate-prefetch of a
single page (including the main resource), the renderer hangs and cannot
kill itself. It gets killed after a long timeout.

Solution:

Bypass the ResourceLoadScheduler for subresources of nostate-prefetch.
These requests are of idle priority in the network stack. This means
they will wait in the global queue and allowed only one at a time. This
is more restrictive than the most aggressive ResourceLoadScheduler
throttling policy.

Also add two tests:
1. Make sure 4 image requests go through when the page is prefetched
2. Make sure the prefetched resources get reused from cache

The bug has a good description of the problem in the very first comment.

[1] Background Tab Resource Load Throttling
    https://www.chromestatus.com/feature/5527160148197376

Bug: 890337
Change-Id: Ifdb5300aba17d95dab14d32090dec4e786fffeb3
Reviewed-on: https://chromium-review.googlesource.com/c/1278799
Reviewed-by: Yutaka Hirano <yhirano@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Matthew Cary <mattcary@chromium.org>
Commit-Queue: Egor Pasko <pasko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602654}
Former-commit-id: b637b7a7103c66f052d42b673f5cf14953f30ce3